# miniRT

./: CMakeLists.txt  blabla.rt
.github/workflows/: build.yml
include/: camera.h  hooks.h  light.h  parse.h  ray.h  render.h
include/hittable/: hittable_list.h
include/hittables/: hittable.h  plane.h  sphere.h
include/render/: ambient.h  hit_record.h  hittable.h  hittable_array.h  point_light.h  render.h
include/render/hittables/: cylinder.h  hittable.h
lib/libft/src/: ft_atof.c  ft_split.c
lib/matrix/: CMakeLists.txt
lib/matrix/include/: matrix.h  matrix3d.h
lib/matrix/src/: addition.c  allocation.c  checks.c  debug.c  matrix.c  multiplication.c  subtraction.c  utils.c
lib/matrix/src/3d/: allocation.c  dot.c  utils.c
lib/vec3/: CMakeLists.txt
lib/vec3/include/: vec3.h
lib/vec3/src/: add.c  dot.c  max.c  multiply.c  new.c  scalar.c  subtract.c  utils.c
lib/vec3/test/: advanced_calculations.cpp  constructors.cpp
sample-configs/: test.rt
src/: hooks.c  main.c  string_utilities.c
src/parsing/: check_file_args.c  check_filmset.c  check_objects.c  error_handling.c  parse_rt_test.sh  string_utilities.c
src/render/: ambient.c  camera.c  color.c  hit_record.c  light.c  point_light.c  ray.c  render.c  render_params.c  utils.c
src/render/hittable/: hittable.c  hittable_list.c  sphere.c
src/render/hittables/: circle.c  cone.c  cylinder.c  hittable.c  hittable_array.c  hittable_list.c  pipe.c  plane.c  sphere.c
test/: CMakeLists.txt  camera_test.cpp
